horisontal scrollbar fix

--- a/static/css/body.css
+++ b/static/css/body.css
@@ -5,14 +5,12 @@
 body {
     font-family: 'Lora', serif;
     margin-top: 6vw;
-    padding: 0;
-    left: 0vw;
-    right: 0vw;
     max-width: 100vw;
     width: 100%;
     background-color: #FFFFF0;
     z-index: 1;
     overflow: scroll;
+    margin-left:-1vw;
 }
 main div {
     display: block;
