--- a/static/css/header.css
+++ b/static/css/header.css
@@ -81,7 +81,7 @@ nav#mainNav div.dropdown {
     z-index: 1;
 	border: 0vw;
     border-color: #f2f2f2;
-    box-shadow: 0vw 0vw 1vw .2vw #888888;
+    box-shadow: 0vw 0.5vw 1vw .2vw #888888;
     overflow: hidden;
 }
 nav#mainNav div.button:hover div.dropdown {
